--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,4 +1,5 @@
 ---
+import A from "@/components/A.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
@@ -9,16 +10,16 @@ import Layout from "@/layouts/Layout.astro";
 	<h1>Contact</h1>
 	<p>
 		Get in touch with me through this form or by using the email
-		<a href="mailto:naparajith@duck.com"> naparajith@duck.com</a>
+		<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A>
 	</p>
 	<p>
-		If you prefer to chat, get in touch <a
+		If you prefer to chat, get in touch <A
 			href="https://api.whatsapp.com/send?phone=919940169018"
 			target="_blank"
 			title="WhatsApp"
 		>
 			here.
-		</a>
+		</A>
 	</p>
 
 	<details>
