--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -1,4 +1,5 @@
 ---
+import A from "@/components/A.astro";
 import Layout from "@/layouts/Layout.astro";
 import { getCollection } from "astro:content";
 
@@ -17,7 +18,7 @@ const bio = await getCollection("bio");
 		{
 			bio.map((about) => (
 				<li>
-					<a href={`/profile/${about.id}`}>{about.data.title}</a>
+					<A href={`/profile/${about.id}`}>{about.data.title}</A>
 				</li>
 			))
 		}
