fix: style updates
- Updated Quotes page anchor decoration style
- Updated Table Header Text Color

--- a/src/pages/legends/index.astro
+++ b/src/pages/legends/index.astro
@@ -36,9 +36,9 @@ const legends = await getCollection("indian-legends");
 	<table class="table-auto">
 		<thead>
 			<tr>
-				<th class="text-primary">Name</th>
-				<th class="text-primary">Description</th>
-				<th class="text-primary">Legacy</th>
+				<th>Name</th>
+				<th>Description</th>
+				<th>Legacy</th>
 			</tr>
 		</thead>
 		<tbody>
