feat: new header layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,13 +5,13 @@ import A from "@/components/A.astro";
 <header
 	class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 >
-	<h2>Naparajith's Portfolio</h2>
+	<h3 class="text-center">Naparajith's Portfolio</h3>
 	<div class="flex justify-between">
-		<span class="flex flex-wrap gap-4">
+		<div class="flex flex-wrap justify-evenly gap-4">
 			<A href="/">Home</A>
 			<A href="/profile">Profile</A>
 			<A href="/quick-view">Quick View</A>
-		</span>
+		</div>
 		<button onclick="history.back()">
 			<span
 				class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
