feat: new home page layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,9 @@ const learning = [
 		</figure>
 		<p><strong>{github.bio}</strong></p>
 	</article>
-	<div class="flex flex-wrap border border-border ~gap-2/4 ~p-2/4">
+	<div
+		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
+	>
 		<A href="/profile" title="Bio">Profile</A>
 		<A href="/quick-view" title="Quick View" data-astro-prefetch="load">
 			Quick View
@@ -50,6 +52,9 @@ const learning = [
 		<A href="/quotes" title="Quotes">Quotes</A>
 		<A href="/legends" title="Legends">Legends</A>
 		<A href="/policy/license.md" title="License">License</A>
+		<A href="/policy/privacy-policy.md" title="Privacy Policy">
+			Privacy Policy
+		</A>
 	</div>
 	<main>
 		<p>
