--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const learning = [
 
 <Layout
 	title="Home"
-	description="The personal portfolio of T L Naparajith, a Software Engineer form India."
+	description="The personal portfolio of T L Naparajith, a Software Engineer from India."
 >
 	<h1 class="text-center">{github.name}</h1>
 	<article>
@@ -46,9 +46,8 @@ const learning = [
 		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
 	>
 		<A href="/profile" title="Bio">Profile</A>
-		<A href="/quick-view" title="Quick View" data-astro-prefetch="load">
-			Quick View
-		</A>
+		<A href="/quick-view" title="Quick View"> Quick View </A>
+		<A href="/contact" title="Contact">Contact</A>
 		<A href="/quotes" title="Quotes">Quotes</A>
 		<A href="/legends" title="Legends">Legends</A>
 		<A href="/policy/license.md" title="License">License</A>
