feat: new blog page
- Added a new page for Blog
- Added a new page for individual Blog posts
- Updated Home page links
- Updated page title for Indian Legends
- New Content Collection for Blog Content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,11 +49,8 @@ const learning = [
 		<A href="/quick-view" title="Quick View"> Quick View </A>
 		<A href="/contact" title="Contact">Contact</A>
 		<A href="/quotes" title="Quotes">Quotes</A>
+		<A href="/blog" title="Blog">Blog</A>
 		<A href="/legends" title="Legends">Legends</A>
-		<A href="/policy/license.md" title="License">License</A>
-		<A href="/policy/privacy-policy.md" title="Privacy Policy">
-			Privacy Policy
-		</A>
 	</div>
 	<main>
 		<p>
