--- a/src/pages/legends/[slug].astro
+++ b/src/pages/legends/[slug].astro
@@ -18,7 +18,7 @@ const { Content } = await render(child);
 ---
 
 <Layout
-	title={`${child.data.name} | Children of the Soil`}
+	title={`${child.data.name} | Indian Legends`}
 	description={child.data.opinion}
 >
 	<h1 class="text-center">
