--- a/src/pages/legends/index.astro
+++ b/src/pages/legends/index.astro
@@ -7,7 +7,7 @@ const legends = await getCollection("indian-legends");
 ---
 
 <Layout
-	title="Legends"
+	title="Indian Legends"
 	description='A dedicated page with a collection of articles about "Indian Legends", a group of people cemented in legend for their contributions towards the growth, progress, security and freedom of the wonderful nation of India.'
 >
 	<article>
