fix: added blog link to quick-view page

--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -60,6 +60,9 @@ const leetcode = await LeetcodeProfile();
 			<A href="/" title="Portfolio - Home"> Portfolio </A>
 		</span>
 		<span>
+			<A href="/blog" title="Portfolio - Blog">Blog</A>
+		</span>
+		<span>
 			<A href="/contact" title="Portfolio - Contact"> Contact </A>
 		</span>
 	</div>
