fix: quote citation style update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,11 @@ const learning = [
 					and a quarter with the passage of time.
 				</blockquote>
 				<figcaption>
-					<cite> - <strong> Unknown Hindu Shloka </strong></cite>
+					<cite>
+						- <strong class="text-inherit">
+							Unknown Hindu Shloka
+						</strong></cite
+					>
 				</figcaption>
 			</figure>
 			<p>
