--- a/src/pages/quotes.astro
+++ b/src/pages/quotes.astro
@@ -25,7 +25,7 @@ quotes.sort((a, b) => parseInt(a.id) - parseInt(b.id));
 							href={quote.data.cite}
 							title={`${quote.data.author} - ${quote.data.cite}`}
 							target="_blank"
-							class="decoration-dashed hover:decoration-solid"
+							class="text-inherit no-underline"
 						>
 							{quote.data.author}
 						</a>
