feat: migrated to v5.0.0-beta.12

--- a/src/components/A.astro
+++ b/src/components/A.astro
@@ -17,6 +17,6 @@ const { href, title, target } = Astro.props;
 >
 	<slot />
 	<span
-		class="absolute inset-x-0 bottom-0 h-[2px] bg-gradient-to-r from-[#d83333] to-[#f041ff] group-hover:h-[4px]"
+		class="absolute inset-x-0 bottom-0 h-[1px] bg-gradient-to-r from-[#d83333] to-[#f041ff] group-hover:h-[2px] md:h-[2px] md:group-hover:h-[4px]"
 	></span>
 </a>
