--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,9 +24,7 @@ const learning = [
 		<figure>
 			<Image
 				alt={github.profile ?? "DrInfinite"}
-				class="mx-auto place-items-center object-cover ~size-48/96"
-				height={260}
-				width={260}
+				class="mx-auto place-items-center ~size-48/96"
 				inferSize
 				loading={"eager"}
 				src={github.avatar_url ?? "/favicon.svg"}
