--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "@/styles/globals.css";
-import { ViewTransitions } from "astro:transitions";
+import { ClientRouter as ViewTransitions } from "astro:transitions";
 
 import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
