--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
 		<ViewTransitions fallback="swap" />
 	</head>
 	<body>
-		{Astro.url.pathname !== "/" ? <Header /> : <div class="mb-20" />}
+		{Astro.url.pathname !== "/" ? <Header /> : <div class="~mb-10/20" />}
 		<slot />
 		<Footer />
 	</body>
