--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -1,5 +1,5 @@
 ---
-// export const prerender = false;
+export const prerender = false;
 
 import { GithubProfile } from "@/actions/github-profile";
 import { LeetcodeProfile } from "@/actions/leetcode-profile";
