--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -8,8 +8,8 @@ import Layout from "@/layouts/Layout.astro";
 			500 | The Server randomly decided to stop working ;(
 		</h3>
 		<p class="text-justify">
-			Try reloading the page or better, go back to start navigating again.
-			Sorry for any inconviences caused!
+			Try reloading the page or better, go back to start navigating again. Sorry
+			for any inconviences caused!
 		</p>
 
 		<button class="mx-auto place-self-center" onclick="history.back()">
