--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -25,17 +25,15 @@ import Layout from "@/layouts/Layout.astro";
 	<details>
 		<summary>Why is there no Contact Form?</summary>
 		<p>
-			A contact form requires a good amount of client-side JS. I currently
-			have no idea on how to make this client-side code as transparent and
-			as open as possible to the end user. Therefore, for the moment, so
-			such form exists.
+			A contact form requires a good amount of client-side JS. I currently have
+			no idea on how to make this client-side code as transparent and as open as
+			possible to the end user. Therefore, for the moment, so such form exists.
 		</p>
 	</details>
 	<details>
 		<summary>Will there be a contact form in the future?</summary>
 		<p>
-			Yes there will be. However, I gurantee no timeline on its
-			implementation.
+			Yes there will be. However, I gurantee no timeline on its implementation.
 		</p>
 	</details>
 </Layout>
