--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,10 +37,7 @@ const learning = [
 			</span>
 
 			<figcaption class="bg-background text-center ~p-2/4">
-				This image comes from my <A
-					href={github.html_url}
-					target="_blank"
-				>
+				This image comes from my <A href={github.html_url} target="_blank">
 					GitHub Profile
 				</A>
 			</figcaption>
@@ -59,18 +56,18 @@ const learning = [
 	</div>
 	<main>
 		<p>
-			This is a portfolio website. The content and views present here are
-			purely meant to showcase my work, skills and abilities. They are my
-			own and do not reflect the views and positions any organisation or
-			corporate entity I work with or have previously worked with. The
-			source code for this site is remotely hosted as a repository on
-			GitHub. The site is deployed, hosted and distributed using Vercel.
+			This is a portfolio website. The content and views present here are purely
+			meant to showcase my work, skills and abilities. They are my own and do
+			not reflect the views and positions any organisation or corporate entity I
+			work with or have previously worked with. The source code for this site is
+			remotely hosted as a repository on GitHub. The site is deployed, hosted
+			and distributed using Vercel.
 		</p>
 		<hr />
 		<div>
 			<p>
-				When I was a kid, I was told a really inspiring quote about
-				learning, which goes something like this:
+				When I was a kid, I was told a really inspiring quote about learning,
+				which goes something like this:
 			</p>
 			<figure>
 				<blockquote
@@ -78,30 +75,26 @@ const learning = [
 						? "http://localhost:4321/"
 						: "https://naparajith.vercel.app/"}
 				>
-					From the teacher is learned a quarter, a quarter from the
-					student's own intelligence, a quarter from fellow students,
-					and a quarter with the passage of time.
+					From the teacher is learned a quarter, a quarter from the student's
+					own intelligence, a quarter from fellow students, and a quarter with
+					the passage of time.
 				</blockquote>
 				<figcaption>
 					<cite>
-						- <strong class="text-inherit">
-							Unknown Hindu Shloka
-						</strong></cite
+						- <strong class="text-inherit"> Unknown Hindu Shloka </strong></cite
 					>
 				</figcaption>
 			</figure>
 			<p>
-				I intened to make learning my long-term commitment, and that
-				takes a lot of support, effort and cooperation. Here are a few
-				things I'm interested in getting help on (not an exhaustive
-				list):
+				I intened to make learning my long-term commitment, and that takes a lot
+				of support, effort and cooperation. Here are a few things I'm interested
+				in getting help on (not an exhaustive list):
 			</p>
 			<ol>
 				{learning.map((concept) => <li>{concept}</li>)}
 			</ol>
 			<p>
-				If you would like to help me in any of these ways, please write
-				to <A
+				If you would like to help me in any of these ways, please write to <A
 					href="mailto:naparajith@duck.com"
 					title="E-Mail Address"
 					target="_blank"
