--- a/src/pages/quotes.astro
+++ b/src/pages/quotes.astro
@@ -9,15 +9,13 @@ quotes.sort((a, b) => parseInt(a.id) - parseInt(b.id));
 <Layout title="Quotes" description="A collection of quotes that I really like.">
 	<h1>Quotes I Like</h1>
 	<p>
-		A collection of quotes from various people that I resonate with and want
-		to share with a wider audience.
+		A collection of quotes from various people that I resonate with and want to
+		share with a wider audience.
 	</p>
 	{
 		quotes.map((quote) => (
 			<figure>
-				<blockquote cite={quote.data.cite}>
-					{quote.data.quote}
-				</blockquote>
+				<blockquote cite={quote.data.cite}>{quote.data.quote}</blockquote>
 				<figcaption>
 					<cite>
 						-{" "}
