fix(src/actions/*): better type safety

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const learning = [
 		>
 			<span class="-my-px ~size-48/96">
 				<Image
-					alt={github.profile ?? "DrInfinite"}
+					alt={"DrInfinite"}
 					class="mx-auto"
 					inferSize
 					width={520}
