feat: improved navigation, layout and content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const learning = [
 		<p><strong>{github.bio}</strong></p>
 	</article>
 	<div
-		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 	>
 		<A href="/profile" title="Bio">Profile</A>
 		<A href="/quick-view" title="Quick View"> Quick View </A>
