--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -25,10 +25,10 @@ const translations = [
 >
 	<article>
 		<p>
-			Naparajith is a name that originates in India. It is a title, that roughly
-			translates to: <strong>
+			The name Naparajith is deeply rooted in ancient Indian culture and roughly
+			translates to <strong>
 				<em>
-					<u>A person who is undefeated.</u>
+					<u>a person who is undefeated.</u>
 				</em>
 			</strong>
 		</p>
