--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -18,7 +18,7 @@ const leetcode = await LeetcodeProfile();
 
 	<h3>Links</h3>
 	<div
-		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 	>
 		<span>
 			<A
@@ -70,7 +70,7 @@ const leetcode = await LeetcodeProfile();
 	<h3>GitHub Stats</h3>
 	<div>
 		<div
-			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 		>
 			<span>Repositories: <strong>{github.public_repos}</strong></span>
 			<span>Followers: <strong>{github.followers}</strong></span>
@@ -80,7 +80,7 @@ const leetcode = await LeetcodeProfile();
 
 	<h3>LeetCode Stats</h3>
 	<div
-		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 	>
 		<span>Rank: <strong>{leetcode.profile?.ranking}</strong></span>
 		<span>
