--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,10 @@ import A from "@/components/A.astro";
 		<div class="flex flex-wrap justify-evenly gap-4">
 			<A href="/">Home</A>
 			<A href="/profile">Profile</A>
+			<!-- <A href="/blog">Blog</A> -->
 			<A href="/quick-view">Quick View</A>
 		</div>
-		<button onclick="history.back()">
+		<button class="rounded-full px-4" onclick="history.back()">
 			<span
 				class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
